app-mdc/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app-mdc
  labels:
    name: app-mdc
