app-mdc/02-NginxApp1-ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-mdc
  namespace: app-mdc
  labels:
    app: app-mdc
spec:
  type: ClusterIP
  selector:
    app: app-mdc
  ports:
    - port: 80
      targetPort: 5000
